--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
     <h1>My Calculator</h1>
     
     <div class=" flex-col justify-center p-20 md:p-10 lg:p-4">
    <div class="pb-2"> 
-     <input id="display" class="bg-gray-100 w-full text-right p-5" readonly>
+     <input id="display" class="bg-gray-100 w-full text-right p-5" readonly/>
     </div>
     <div class="grid grid-cols-4 gap-2 p-1" >
     <button class="p-2 bg-gray-200 rounded ">C</button>
+    <button class="p-2 bg-gray-200 rounded ">DEL</button>
     <button class="p-2 bg-gray-200 rounded ">+/-</button>
-    <button class="p-2 bg-gray-200 rounded ">%</button>
     <button class="p-2 bg-gray-200 rounded ">÷</button>
     </div>
     <div class="grid grid-cols-4 gap-2 p-1">
@@ -38,11 +38,12 @@
     <button class="p-2 bg-gray-200 rounded ">+</button>
     </div>
     <div class="grid grid-cols-4 gap-2 p-1">
-    <div></div>
+    <button class="p-2 bg-gray-200 rounded ">%</button>
     <button class="p-2 bg-gray-200 rounded ">0</button>
     <button class="p-2 bg-gray-200 rounded ">.</button>
     <button class="p-2 bg-gray-200 rounded ">=</button>
     </div>
     </div>
+         <script src="script.js"></script>
 </body>
 </html>
